<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".FaturaActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarFatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <TextView
            android:id="@+id/txtResumoFatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Resumo das Faturas"
            android:gravity="start"
            android:textSize="30sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="100sp"/>

    <TextView
            android:id="@+id/txtDataVencimento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vencimento_fatura"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20sp"/>

    <TextView
            android:id="@+id/txtSaldoParcial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saldo_fatura"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"/>

    <Button
            android:id="@+id/btnPagarFatura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pagar_fatura"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:background="@color/colorLightBlue"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:padding="15dp"/>


</LinearLayout>