<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

    <ImageView
            android:id="@+id/imgSaldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/saldo"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"/>

    <TextView
            android:id="@+id/txtSaldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgSaldo"
            android:text="@string/saldo"
            android:layout_marginTop="15dp"
            android:textSize="24sp"
            android:textStyle="bold"/>

    <ImageView
            android:id="@+id/imgFatura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/fatura"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"/>

    <TextView
            android:id="@+id/txtFatura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/imgFatura"
            android:text="@string/fatura"
            android:layout_marginTop="15dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"/>

    <ImageView
            android:id="@+id/imgTransferencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/transferencia"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtSaldo"
            android:layout_marginTop="50dp"
    />

    <TextView
            android:id="@+id/txtTransferencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/transferencia"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="20sp"
            app:layout_constraintTop_toBottomOf="@+id/imgTransferencia"/>

    <ImageView
            android:id="@+id/imgPoupanca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/poupanca"
            app:layout_constraintTop_toBottomOf="@+id/txtFatura"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginTop="50dp"
    />

    <TextView
            android:id="@+id/txtPoupanca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poupanca"
            app:layout_constraintTop_toBottomOf="@id/imgPoupanca"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:layout_marginTop="20sp"
            android:textSize="24sp"
            android:textStyle="bold"/>


</androidx.constraintlayout.widget.ConstraintLayout>